# Todo_microservices

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: linter.yml
src/broker_service/: docker-compose.yaml
src/noftification_service/: Dockerfile  docker-compose.yaml  env.example  pyproject.toml
src/todo_service/: docker-compose.yaml  pyproject.toml
src/todo_service/api/: App.py
src/todo_service/api/v1/: app.py
src/todo_service/api/v1/routes/: Auth.py  auth.py
src/todo_service/api/v1/schemas/: UserSchemas.py  tasks_schemas.py  user_schemas.py
src/todo_service/config/: Config.py  Logger.py  config.py  logger.py
src/todo_service/database/dtos/: BaseDTOS.py  TaskDTOS.py  UserDTOS.py  base.py  tasks.py  users.py
src/todo_service/database/models/: base.py  tasks.py  users.py
src/todo_service/database/repositories/: AbstractRepositories.py  TaskRepository.py  UserRepository.py  __init__.py  users.py
src/todo_service/database/utils/: Utils.py  utils.py
src/todo_service/dependencies/: Dependencies.py
src/todo_service/services/: AbstractService.py  TaskService.py  UserService.py
todo_service/: Dockerfile  docker-compose.yaml
