[tool.poetry]
name = "todo-microservices"
version = "0.1.0"
description = "Todo service on FastAPI with another service of noftifications with Aiogram , connected by Kafka"
authors = ["nalsher <nalsher@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
confluent-kafka = "^2.6.0"
sqlalchemy = "^2.0.36"
aiogram = "^3.14.0"
flake8 = "^7.1.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
